--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="home_select_org">Select an organization</string>
+    <string name="home_complaintHeadET">Complaint Head..</string>
+    <string name="home_complaintET">Complaint..</string>
+
 </resources>
