added logo images and changed app name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,10 @@
 <resources>
-    <string name="app_name">Complaint_Logger</string>
+    <string name="app_name">Complaint Logger</string>
 
      <string name="action_settings">Settings</string>
     <string name="home_select_org">Select an organization</string>
     <string name="home_complaintHeadET">Complaint Head..</string>
     <string name="home_complaintET">Complaint..</string>
+    <string name="login_spinner_title">Country</string>
 
 </resources>
